# version-control

./: .env  ATOMIC_SAVE_FIX.md  CACHE_WARMING.md  Cargo.toml  DEBOUNCER_COMPLETE.md  DEBOUNCER_IMPLEMENTATION.md  DEBOUNCER_QUICKSTART.md  DELETE_FIX.md  DIFF_DISPLAY.md  DUAL_WATCHER_SUMMARY.md  DX_TOOLS_INTEGRATION_GUIDE.md  FIXES_APPLIED.md  FORGE.md  HOW_TO_RUN_FORGE.md  LOGGING_IMPROVEMENTS.md  PERFORMANCE.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_QUICKSTART.md  PERFORMANCE_SUMMARY.md  PRODUCTION_STATUS.md  QUICK_START_WEB_UI.md  README.md  SIMPLIFIED_ARCHITECTURE.md  orchestration.toml  test_cache_warming.sh  test_debouncer.txt  test_forge_extension.md  test_performance.txt  test_read_speed.sh
.dx/: PRODUCTION_READY.md
.dx/forge/: config.json  forge.db
docs/: ACTION_ITEMS.md  ARCHITECTURE.md  CLOUDFLARE_DEPLOYMENT.md  DX_TOOLS_INTEGRATION_GUIDE.md  FAQ.md  FIX_R2_ERRORS.md  FORGE.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_STATUS.md  QUICK_START.md  R2_IMPLEMENTATION_SUMMARY.md  README.md  SIMPLIFICATION_COMPLETE.md  STORAGE_ANALYSIS.md  SUCCESS.md  TEST_RESULTS.md  TRAFFIC_BRANCH_AND_LSP.md  WEB_UI_GUIDE.md
examples/: FORGE_R2_DEMO_README.md  complete_dx_workflow.rs  orchestration.rs  quick_test.rs  r2_demo.rs  simple.rs  test_all_features.rs  traffic_branch_and_lsp.rs  web_ui.rs
examples/forge-demo/: README.md  WEB_UI_SUMMARY.md
examples/forge-demo/.dx/forge/: HEAD  config.json
examples/forge-demo/.dx/forge/context/: metadata.json
examples/forge-demo/.dx/forge/logs/: HEAD
examples/forge-demo/.dx/forge/refs/heads/: release
src/: error.rs  injection.rs  lib.rs  main.md  main.rs  orchestrator.rs  patterns.rs  version.rs  watcher.rs
src/context/: ai_context.rs  annotations.rs  discussions.rs  mod.rs  traffic_branch.rs
src/crdt/: anchor.rs  document.rs  mod.rs  operations.rs
src/server/: api.rs  mod.rs
src/storage/: blob.rs  db.rs  git_interop.rs  mod.rs  oplog.rs  r2.rs
src/sync/: clock.rs  mod.rs  protocol.rs  remote.rs
src/watcher/: cache_warmer.rs  detector.rs  lsp_detector.rs  mod.rs
src/watcher_legacy/: cache_warmer.rs  detector.rs  lsp_detector.rs  mod.rs
tests/: workflow.rs  ws_cross_process.rs  ws_roundtrip.rs
tools/: dx-style.toml  dx-ui.toml
vscode-forge/: .eslintrc.json  .vscodeignore  IMPLEMENTATION_COMPLETE.md  LICENSE.md  QUICKSTART.md  README.md  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json
vscode-forge/src/: extension.ts  forgeWatcher.ts  outputFormatter.ts  types.ts
